--- a/docker/manager/templates/manager/main_panel.html
+++ b/docker/manager/templates/manager/main_panel.html
@@ -1,4 +1,7 @@
 {% extends "manager/base.html" %}
+{% block title %}
+Home
+{% endblock %}
 {% block head %}
 <!-- you need to include the shieldui css and js assets in order for the charts to work -->
 <link rel="stylesheet" type="text/css" href="http://www.shieldui.com/shared/components/latest/css/shieldui-all.min.css" />
