--- a/docker/manager/templates/manager/base.html
+++ b/docker/manager/templates/manager/base.html
@@ -34,7 +34,7 @@
 	                    <!-- <li><a href="signup.html"><i class="fa fa-list-ol"></i> SignUp</a></li> -->
 	                    <!-- <li><a href="register.html"><i class="fa fa-font"></i> Register</a></li> -->
 	                    <!-- <li><a href="timeline.html"><i class="fa fa-font"></i> Timeline</a></li> -->
-	                    <li><a href="{% url 'manager.views.create_image' %}"><i class="fa fa-list-ol"></i> Forms</a></li>
+	                    <li><a href="{% url 'manager.views.create_image' %}"><i class="fa fa-list-ol"></i> New Container</a></li>
 	                    <!-- <li><a href="typography.html"><i class="fa fa-font"></i> Typography</a></li> -->
 	                    <!-- <li><a href="bootstrap-elements.html"><i class="fa fa-list-ul"></i> Bootstrap Elements</a></li> -->
 	                    <!-- <li><a href="bootstrap-grid.html"><i class="fa fa-table"></i > Bootstrap Grid</a></li>             -->
