--- a/docker/manager/templates/manager/create_instance.html
+++ b/docker/manager/templates/manager/create_instance.html
@@ -4,6 +4,14 @@ New Instance
 {% endblock %}
 {% block content %}
 <div class="row">
+    <div class="col-lg-12">
+        <form action="{% url 'manager.views.create_image' %}" method="get">
+            {{ form.as_p }}
+            <input type="submit" value="Sumbit" />
+        </form> 
+    </div>
+</div>
+<div class="row">
     <div class="col-lg-6">
 
         <form role="form">
