--- a/docker/manager/templates/manager/base.html
+++ b/docker/manager/templates/manager/base.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>{% block title %}{% endblock %}</title>
+		<link rel="shortcut icon" type="image/x-icon" href="{% static 'img/dockers.ico' %}" />
 		<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" />
 		<link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.min.css' %}" />
 		<link rel="stylesheet" type="text/css" href="{% static 'css/local.css' %}" />
@@ -29,15 +30,8 @@
 	            <div class="collapse navbar-collapse navbar-ex1-collapse">
 	                <ul class="nav navbar-nav side-nav">
 	                    <li><a href="{% url 'home' %}"><i class="fa fa-bullseye"></i> Dashboard</a></li>
-	                    <!-- <li><a href="portfolio.html"><i class="fa fa-tasks"></i> Portfolio</a></li> -->
-	                    <!-- <li><a href="blog.html"><i class="fa fa-globe"></i> Blog</a></li> -->
-	                    <!-- <li><a href="signup.html"><i class="fa fa-list-ol"></i> SignUp</a></li> -->
-	                    <!-- <li><a href="register.html"><i class="fa fa-font"></i> Register</a></li> -->
-	                    <!-- <li><a href="timeline.html"><i class="fa fa-font"></i> Timeline</a></li> -->
 	                    <li><a href="{% url 'manager.views.create_image' %}"><i class="fa fa-list-ol"></i> New Container</a></li>
-	                    <!-- <li><a href="typography.html"><i class="fa fa-font"></i> Typography</a></li> -->
-	                    <!-- <li><a href="bootstrap-elements.html"><i class="fa fa-list-ul"></i> Bootstrap Elements</a></li> -->
-	                    <!-- <li><a href="bootstrap-grid.html"><i class="fa fa-table"></i > Bootstrap Grid</a></li>             -->
+	                    <li><a href="{% url 'manager.views.display_instances' %}"><i class="fa fa-list-ol"></i> Running Containers</a></li>
 	                </ul>
 	                <ul class="nav navbar-nav navbar-right navbar-user">
 	                    <li class="dropdown messages-dropdown">
@@ -74,7 +68,16 @@
 	            </div>
 	        </nav>
 	        <div id="page-wrapper">
-				{% block content %}{% endblock %}
+	        	<div class="row">
+	        		<div class="col-lg-12">
+	        			<h1>{% block page_title %}{% endblock %}</h1>
+	        		</div>
+	        	</div>
+	        	<div class="row">
+	        		<div class="col-lg-12">
+						{% block content %}{% endblock %}
+					</div>
+				</div>
 			</div>
 		</div>
 		{% block footer %}{% endblock %}
