--- a/docker/manager/templates/manager/main_panel.html
+++ b/docker/manager/templates/manager/main_panel.html
@@ -11,21 +11,11 @@ Home
 <script type="text/javascript" src="http://www.shieldui.com/shared/components/latest/js/shieldui-all.min.js"></script>
 <script type="text/javascript" src="http://www.prepbootstrap.com/Content/js/gridData.js"></script>
 {% endblock %}
+{% block page_title %}
+Dashboard <small>Statistics and more</small>
+{% endblock %}
 {% block content %}
 <div class="row">
-    <div class="col-lg-12">
-        <h1>Dashboard <small>Statistics and more</small></h1>
-        <div class="alert alert-dismissable alert-warning">
-            <button data-dismiss="alert" class="close" type="button">×</button>
-            <h4>Warning!</h4>
-            <p>You have two new messages.
-                </p>
-        </div>
-    </div>
-</div>
-
-<div class="row">
-
     <div class="col-md-8">
         <div class="panel panel-primary">
             <div class="panel-heading">
