--- a/docker/manager/templates/manager/monitor_instances.html
+++ b/docker/manager/templates/manager/monitor_instances.html
@@ -1,4 +1,44 @@
-{% extend "monitor/base.html" %}
+{% extends "manager/base.html" %}
+{% block title %}
+Status
+{% endblock %}
+{% block head %}
+<style>
+td {
+	padding: 1em;
+	text-align: center;
+}
+</style>
+{% endblock %}
+{% block page_title %}
+View Containers
+{% endblock %}
 {% block content %}
-
+<div class="panel panel-primary">
+	<div class="panel-heading">
+		<h3 class="panel-title">Containers</h3>
+	</div>
+	<div class="panel-body">
+		<table>
+			<thead>
+				<tr>
+					<td>Number</td>
+					{% for heading in keys %}
+						<td>{{ heading }}</td>
+					{% endfor %}
+				</tr>
+			</thead>
+			<tbody>
+				{% for container, info in containers.items %}
+					<tr>
+						<td>{{ container }}</td>
+						{% for key, value in info.items %}
+							<td>{{ value }}</td>	
+						{% endfor %}
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+	</div>
+</div>
 {% endblock %}
