--- a/docker/manager/templates/manager/create_instance.html
+++ b/docker/manager/templates/manager/create_instance.html
@@ -39,3 +39,10 @@ Create New Containers
     </div>
 </div>
 {% endblock %}
+{% block footer %}
+<script type="text/javascript">
+$(document).ready(function() {
+    $("#nav-create").addClass("selected");
+});
+</script>
+{% endblock %}
