--- a/docker/manager/templates/manager/main_panel.html
+++ b/docker/manager/templates/manager/main_panel.html
@@ -467,4 +467,10 @@ Dashboard <small>Statistics and more</small>
         });            
     });        
 </script>
+
+<script type="text/javascript">
+$(document).ready(function() {
+    $("#nav-home").addClass("selected");
+});
+</script>
 {% endblock %}
