--- a/docker/manager/templates/manager/images.html
+++ b/docker/manager/templates/manager/images.html
@@ -1,6 +1,6 @@
 {% extends "manager/base.html" %}
 {% block title %}
-Status
+Images
 {% endblock %}
 {% block head %}
 <style>
@@ -11,12 +11,12 @@ td {
 </style>
 {% endblock %}
 {% block page_title %}
-View Containers
+Manage Images
 {% endblock %}
 {% block content %}
 <div class="panel panel-primary">
 	<div class="panel-heading">
-		<h3 class="panel-title">Containers</h3>
+		<h3 class="panel-title">Images</h3>
 	</div>
 	<div class="panel-body">
 		<table>
@@ -29,11 +29,11 @@ View Containers
 				</tr>
 			</thead>
 			<tbody>
-				{% for container, info in containers.items %}
+				{% for image, info in images.items %}
 					<tr>
-						<td>{{ container }}</td>
+						<td>{{ image }}</td>
 						{% for key, value in info.items %}
-							<td>{{ value }}</td>	
+							<td>{{ value }}</td>
 						{% endfor %}
 					</tr>
 				{% endfor %}
@@ -45,7 +45,7 @@ View Containers
 {% block footer %}
 <script type="text/javascript">
 $(document).ready(function() {
-	$("#nav-status").addClass("selected");
+	$("#nav-images").addClass("selected");
 });
 </script>
 {% endblock %}
