--- a/docker/manager/templates/manager/base.html
+++ b/docker/manager/templates/manager/base.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" />
 		<link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.min.css' %}" />
 		<link rel="stylesheet" type="text/css" href="{% static 'css/local.css' %}" />
+		<link rel="stylesheet" type="text/css" href="{% static 'css/mycss.css' %}" />
 		<script type="text/javascript" src="{% static 'js/jquery-1.10.2.min.js' %}"></script>
 		<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
 
