--- a/docker/manager/templates/manager/images.html
+++ b/docker/manager/templates/manager/images.html
@@ -1,48 +1,37 @@
-{% extends "manager/base.html" %}
+{% extends "manager/table_base.html" %}
+
 {% block title %}
 Images
-{% endblock %}
-{% block head %}
-<style>
-td {
-	padding: 1em;
-	text-align: center;
-}
-</style>
 {% endblock %}
 {% block page_title %}
 Manage Images
 {% endblock %}
-{% block content %}
-<div class="panel panel-primary">
-	<div class="panel-heading">
-		<h3 class="panel-title">Images</h3>
-	</div>
-	<div class="panel-body">
-		<table>
-			<thead>
-				<tr>
-					<td>Number</td>
-					{% for heading in keys %}
-						<td>{{ heading }}</td>
-					{% endfor %}
-				</tr>
-			</thead>
-			<tbody>
-				{% for image, info in images.items %}
-					<tr>
-						<td>{{ image }}</td>
-						{% for key, value in info.items %}
-							<td>{{ value }}</td>
-						{% endfor %}
-					</tr>
-				{% endfor %}
-			</tbody>
-		</table>
-	</div>
-</div>
+{% block panel_title %}
+Images
 {% endblock %}
-{% block footer %}
+{% block table %}
+<table>
+	<thead>
+		<tr>
+			<td>Number</td>
+			{% for heading in keys %}
+				<td>{{ heading }}</td>
+			{% endfor %}
+		</tr>
+	</thead>
+	<tbody>
+		{% for image, info in images.items %}
+			<tr>
+				<td>{{ image }}</td>
+				{% for key, value in info.items %}
+					<td>{{ value }}</td>
+				{% endfor %}
+			</tr>
+		{% endfor %}
+	</tbody>
+</table>
+{% endblock %}
+{% block extra_footer %}
 <script type="text/javascript">
 $(document).ready(function() {
 	$("#nav-images").addClass("selected");
