--- a/docker/manager/templates/manager/create_instance.html
+++ b/docker/manager/templates/manager/create_instance.html
@@ -14,8 +14,8 @@ Create New Containers
     </div>
     <div class="panel-body">
         <form action="{% url 'manager.views.create_image' %}" method="get" role="form">
-            {{ form.non_field_errors }}
-            <table class="form-group">
+            {# {{ form.non_field_errors }} #}
+<!--{#             <table class="form-group">
                 <tbody>
                     <tr>
                         <td><label for="id_name">Container Name: </label></td>
@@ -34,7 +34,10 @@ Create New Containers
                         <td><input type="submit" class="form-control" value="Launch Container" /></td>
                     </tr>
                 </tbody>
-            </table>
+            </table> #} -->
+
+            {{ form }}
+            <input type="submit" value="Launch Instance" />
         </form> 
     </div>
 </div>
