Renamed things for clarity, and tried to get create container to work
Renamed a bunch of create_image to create_container for clarity.
Also added some rudimentary code to try and test the create_container method

--- a/docker/manager/templates/manager/create_instance.html
+++ b/docker/manager/templates/manager/create_instance.html
@@ -13,9 +13,9 @@ Create New Containers
         <h3 class="panel-title">Select Options</h3>
     </div>
     <div class="panel-body">
-        <form action="{% url 'manager.views.create_image' %}" method="get" role="form">
+        <form action="{% url 'manager.views.create_container' %}" method="get" role="form">
             {# {{ form.non_field_errors }} #}
-<!--{#             <table class="form-group">
+<!--{#      <table class="form-group">
                 <tbody>
                     <tr>
                         <td><label for="id_name">Container Name: </label></td>
