--- a/docker/manager/templates/manager/base.html
+++ b/docker/manager/templates/manager/base.html
@@ -31,7 +31,7 @@
 	            <div class="collapse navbar-collapse navbar-ex1-collapse">
 	                <ul class="nav navbar-nav side-nav">
 	                    <li id="nav-home"><a href="{% url 'home' %}"> Dashboard</a></li>
-	                    <li id="nav-create"><a href="{% url 'manager.views.create_image' %}"> New Container</a></li>
+	                    <li id="nav-create"><a href="{% url 'manager.views.create_container' %}"> New Container</a></li>
 	                    <li id="nav-status"><a href="{% url 'manager.views.display_instances' %}"> Running Containers</a></li>
 	                    <li id="nav-images"><a href="{% url 'manager.views.display_images' %}"> Manage Images</a></li>
 	                </ul>
