Added in detail page for images. Updated detail page for containers

--- a/docker/manager/templates/manager/base.html
+++ b/docker/manager/templates/manager/base.html
@@ -31,9 +31,9 @@
 	            <div class="collapse navbar-collapse navbar-ex1-collapse">
 	                <ul class="nav navbar-nav side-nav">
 	                    <li id="nav-home"><a href="{% url 'home' %}"> Dashboard</a></li>
-	                    <li id="nav-create"><a href="{% url 'manager.views.create_image' %}"> New Container</a></li>
-	                    <li id="nav-status"><a href="{% url 'manager.views.display_instances' %}"> Manage Containers</a></li>
+	                    <li id="nav-create"><a href="{% url 'manager.views.create_image' %}"> New Image</a></li>
 	                    <li id="nav-images"><a href="{% url 'manager.views.display_images' %}"> Manage Images</a></li>
+	                    <li id="nav-status"><a href="{% url 'manager.views.display_instances' %}"> Manage Containers</a></li>
 	                </ul>
 	                <ul class="nav navbar-nav navbar-right navbar-user">
 	                    <li class="dropdown messages-dropdown">
