Commiting for Lance

--- a/docker/manager/templates/manager/create_instance.html
+++ b/docker/manager/templates/manager/create_instance.html
@@ -45,7 +45,7 @@ Create New Containers
 {% block footer %}
 <script type="text/javascript">
 $(document).ready(function() {
-    $("#nav-create").addClass("selected");
+    $("#nav-create-image").addClass("selected");
 });
 </script>
 {% endblock %}
